# dialog-bubble-language

./: CMakeLists.txt  LICENSE  README.md  generate.py  language_builder.rgl
other/: correlatives.h  generate.py  grammer.y  lexicon.lex  pronouns.h  rambling_test.txt
src/: audio.c  audio.h  constants.h  correlatives.h  database.c  database.h  grammer.h  grammer.y  lexicon.lex  main.c  pronouns.h  sql.c  sql.h  voice.c  voice.h  voice_from_text.c  voice_from_text.h
unit-tests/: CMakeLists.txt  audio_1.h  audio_2.h  database.c  lexicon.c  sql.c  voice.c  voice_from_text.c
